feat: add shared cache option for Redis

--- a/config/crd/bases/renovate.renovatebot.com_renovates.yaml
+++ b/config/crd/bases/renovate.renovatebot.com_renovates.yaml
@@ -23,6 +23,9 @@ spec:
     - jsonPath: .spec.dryRun
       name: DryRun
       type: boolean
+    - jsonPath: .spec.version
+      name: Version
+      type: string
     name: v1alpha1
     schema:
       openAPIV3Schema:
@@ -236,6 +239,24 @@ spec:
                 type: object
               schedule:
                 type: string
+              sharedCache:
+                properties:
+                  enabled:
+                    type: boolean
+                  redis:
+                    properties:
+                      url:
+                        type: string
+                    required:
+                    - url
+                    type: object
+                  type:
+                    enum:
+                    - redis
+                    type: string
+                required:
+                - enabled
+                type: object
               suspend:
                 default: false
                 type: boolean
