--- a/config/crd/bases/renovate.renovatebot.com_renovates.yaml
+++ b/config/crd/bases/renovate.renovatebot.com_renovates.yaml
@@ -31,6 +31,7 @@ spec:
     name: v1alpha1
     schema:
       openAPIV3Schema:
+        description: Renovate crd object
         properties:
           apiVersion:
             description: 'APIVersion defines the versioned schema of this representation
@@ -47,6 +48,12 @@ spec:
           spec:
             description: RenovateSpec defines the desired state of Renovate
             properties:
+              discovery:
+                properties:
+                  schedule:
+                    default: 0 */2 * * *
+                    type: string
+                type: object
               logging:
                 properties:
                   level:
@@ -265,7 +272,7 @@ spec:
                     default: 10
                     type: integer
                   version:
-                    default: 27.7.0
+                    default: 27.15.0
                     type: string
                 required:
                 - platform
